fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,70 @@
 /* General */
 *,
 *:before,
-*:after{
-    padding:0;
-    margin: 0;
-    box-sizing:border-box;
+*:after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 /* Styling the bosy of the page */
-body{
-    height: 100vh;
-background: rgb(174,238,235);
-background: radial-gradient(circle, rgba(174,238,235,0.9164040616246498) 0%, rgba(31,77,131,1) 38%);
+body {
+  height: 100vh;
+  background: rgb(174, 238, 235);
+  background: radial-gradient(
+    circle,
+    rgba(174, 238, 235, 0.9164040616246498) 0%,
+    rgba(31, 77, 131, 1) 38%
+  );
 
-   /* styling the container that contains the game infos  */
-}.container {
-    position: absolute;
-    width: 50%;
-    min-width: 580px;
-    transform:translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    background-color: white;
-    padding: 50px 10px;
-    border-radius: 5px;
-    display: grid;
-    justify-items:center;
-    font-family:'poppins',sans-seriff;
-
+  /* styling the container that contains the game infos  */
+}
+.container {
+  position: absolute;
+  width: 50%;
+  min-width: 580px;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  padding: 50px 10px;
+  border-radius: 5px;
+  display: grid;
+  justify-items: center;
+  font-family: "poppins", sans-seriff;
 }
 /* Styling the fonts */
-h3,h4 {
-    font-size: 20px;
-    font-weight: 700;
+h3,
+h4 {
+  font-size: 20px;
+  font-weight: 700;
 }
 p {
-    font-weight: 400;
+  font-weight: 400;
 }
 /* Styling the input and button area */
 input[type="text"] {
-    width: 90px;
-    font-weight:600;
-    color:#1f4d83;
-    padding: 20px 0;
-    text-align:center;
-    margin-top: 30px;
-    border-radius: 5px;
-    border: 2px solid #202020;
-    font-size: 15px;
+  width: 90px;
+  font-weight: 600;
+  color: #1f4d83;
+  padding: 20px 0;
+  text-align: center;
+  margin-top: 30px;
+  border-radius: 5px;
+  border: 2px solid #202020;
+  font-size: 15px;
 }
-button{
-    width: 160px;
-    padding:15px, 0px;
-    border-radius: 5px;
-    background-color:#1f4d83;
-    color:#ffff;
-    border: none;
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 30px;
-    outline: none;
+button {
+  width: 160px;
+  padding: 15px, 0px;
+  border-radius: 5px;
+  background-color: #1f4d83;
+  color: #ffff;
+  border: none;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 30px;
+  outline: none;
 }
-button:hover{
-    background-color: #aabdd3;
+button:hover {
+  background-color: #aabdd3;
 }
